<resources>
    <string name="app_name">Lifesense Sport Helper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>
    <string name="pls_restart_ls_sport">please restart lifesense sport app</string>
    <string name="xposed_not_working">Xposed not working , please check </string>
    <string name="guide_text">click app name to enable notification</string>
    <string name="donate">Donate</string>


    <string name="pref_header_general">General</string>
    <string name="pref_title_fake_type">Fake type</string>
    <string-array name="pref_fake_type_list_titles">
        <item>UNKNOWN</item>
        <item>ALL</item>
        <item>OTHER</item>
        <item>SMS</item>
        <item>WECHAT - {recommend}</item>
        <item>QQ</item>
        <item>FACEBOOK</item>
        <item>TWITTER</item>
        <item>LINE</item>
        <item>GMAIL</item>
        <item>WHATSAPP</item>
        <item>SE_WELLNESS</item>
        <item>KAKAO</item>
    </string-array>

    <string-array name="pref_fake_type_list_values">
        <item>UNKNOWN</item>
        <item>ALL</item>
        <item>OTHER</item>
        <item>SMS</item>
        <item>WECHAT</item>
        <item>QQ</item>
        <item>FACEBOOK</item>
        <item>TWITTER</item>
        <item>LINE</item>
        <item>GMAIL</item>
        <item>WHATSAPP</item>
        <item>SE_WELLNESS</item>
        <item>KAKAO</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


    <string name="title_activity_about">About</string>
    <string name="large_text">
        "\n\n"
        "A Xposed Hook Make lifesense band supoort more app's notification \n\n"
        "Support and tested on MAMBO2\n\n"
        "Github : https://github.com/TimothyZhang023 \n\n"
    </string>
    <string name="show_system_app">show system apps</string>
</resources>
